@@ -2,7 +2,7 @@
 Name=Gredict
 Comment=Satellite tracker
 Exec=gpredict
-Icon=$(datadir)/pixmaps/gpredict/icons/gpredict-icon.png
+Icon=gpredict-icon
 Terminal=false
 Type=Application
 Categories=HamRadio;
